[gd_scene load_steps=6 format=3 uid="uid://blwtacw6rbdye"]

[ext_resource type="Script" path="res://Scripts/MainCharacter.gd" id="1_niili"]
[ext_resource type="Texture2D" uid="uid://vrfkmlq6h0im" path="res://icon.svg" id="2_puhgc"]
[ext_resource type="Texture2D" uid="uid://ctdwfv58t2cdu" path="res://Assets/Placeholders/WhiteSprites.png" id="3_6qemi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4meyu"]
radius = 30.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38nh8"]
size = Vector2(30, 30)

[node name="MainCharacter" type="CharacterBody2D" groups=["MainCharacter"]]
collision_mask = 14
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_niili")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_puhgc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4meyu")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_path_custom_color = Color(0, 1, 0, 1)
debug_path_custom_line_width = 2.0

[node name="PathCalculationTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Boomerang" type="RigidBody2D" parent="." groups=["Boomerang"]]
position = Vector2(61, -14)
collision_layer = 2
collision_mask = 12
mass = 0.1
contact_monitor = true
max_contacts_reported = 50
linear_damp_mode = 1
linear_damp = 0.8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boomerang"]
shape = SubResource("RectangleShape2D_38nh8")

[node name="Sprite2D" type="Sprite2D" parent="Boomerang"]
modulate = Color(1, 1, 0, 1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_6qemi")

[connection signal="timeout" from="PathCalculationTimer" to="." method="_on_path_calculation_timer_timeout"]
